# AI-girlfriend-QQ

./: .env.example  .gitignore  README.md  napcat-onebot11-config.json  pyproject.toml  run.ps1  start-all.bat  start-atri.bat  start-napcat.bat  stop-all.bat  stop-atri.bat  triggers.json  停止亚托莉.bat  卸载桌宠亚托莉.bat  安装桌宠亚托莉.bat  新手启动说明.txt  检查亚托莉状态.bat
data/stickers/: README.txt  atri_manual_manifest.json  emotion_map.json
data/stickers/_curated/: ATTRIBUTION.txt
deploy/cloud/: README.md  atri-qq-bot.service  cloud.env.example  install-ubuntu.sh
docs/: architecture_overview.html
src/atri_desktop/: __init__.py  app.py  assets.py  controller.py  single_instance.py
src/atri_qq_bot/: __init__.py  __main__.py  config.py  group_chat.py  iteration.py  language_guard.py  lore.py  memory.py  message_plan.py  onebot.py  paths.py  persona.py  proactive.py  runtime_control.py  stickers.py  toolbox.py  webui.py
src/atri_qq_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/atri_qq_bot/config/: __init__.py  (+3 more)
src/atri_webui/: __init__.py  config_admin.py  memory_admin.py  model_profiles.py  page.py  server.py  sticker_admin.py  upload_parser.py
tests/: test_desktop_pet.py  test_llm_tools.py  test_message_features.py  test_persona.py  test_webui_admin.py
tools/: check-status.ps1  hidden_launcher.py  hidden_watcher.py  install-qq-scheduled-task.ps1  install-qq-watcher.ps1  launcher-delayed.vbs  seed-default-stickers.ps1  start-with-qq.ps1  start-with-qq.vbs  watch-qq.ps1  watch-qq.vbs
tools/desktop_pet/: install-desktop-pet.ps1  uninstall-desktop-pet.ps1
(+50 files in other folders)
